# LogicPWN

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_v0.4.0.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ANALYSIS_AND_IMPROVEMENTS.md  CONTRIBUTING.md  DOCS_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  Makefile  PRE_COMMIT_SIMPLIFICATION.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SECURITY_ENHANCEMENT_SUMMARY.md  cookies.txt  enhanced_access_demo.py  fix_underlines.py  integration_enhancement.py  last-test-run.txt  pyproject.toml  validator_demo.py  vercel.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/profile/: README.md
.github/workflows/: auto-update-docs.yml  docs.yml  release.yml  tests.yml
audit_reports/: phase4_logging_middleware_config_audit.md
docs/: AUTO_COMMIT_WORKFLOW.md  astro.config.mjs  package-lock.json  test-auto-commit.md
docs/source/: access_detection.rst  api_reference.rst  async_runner.rst  case_studies.rst  comparison.rst  conf.py  enterprise.rst  exploit_engine.rst  faq.rst  features.rst  getting_started.rst  index.rst  performance_benchmarks.rst  roadmap.rst  tutorials.rst
examples/: 01_basic_example.py  02_dvwa_complete.py  03_simple_exploits.py  04_dvwa_xss_complete.py  05_xss_quick_demo.py  06_xss_url_generator.py  07_dvwa_proper_workflow.py  08_dvwa_working_flow.py  README.md  __init__.py  advanced_features_demo.py  async_exploit_chaining.py  auth_integration_tests.py  basic_auth_example.py  dvwa_auth_example.py  dvwa_flow.py  enhanced_access_testing_examples.py  indian_law_enforcement_example.py  integration_demo.py  performance_optimization_example.py  phase4_enhancements_demo.py  prototype_pollution_ssti_rce_chain.yaml  request_runner_example.py  response_validator_example.py  run_examples.py  run_simple_exploit.py  runner_enhanced_example.py  security_enhanced_demo.py  session_chaining_demo.py  simple_exploit_corrected.yaml  stress_testing_example.py  validator_security_demo.py
examples/exploits/: advanced_chain.yaml  idor_chain.yaml  ssrf_chain.yaml
examples/investigation_reports/: compliance_checklist.md  cybersecurity_investigation_report.html  cybersecurity_investigation_report.json  cybersecurity_investigation_report.markdown  digital_evidence_summary.json
examples/library_usage/: 02_authenticated_testing.py  03_exploit_chain_execution.py  04_batch_endpoint_testing.py  05_context_manager_usage.py  06_result_export_and_reporting.py  (+1 more)
integration_test_output/: cybersecurity_investigation_report.html  cybersecurity_investigation_report.json  cybersecurity_investigation_report.markdown  digital_evidence_summary.json
logicpwn/: __init__.py  logging_config.py  quickstart.py  results.py
scripts/: README.md  api_docs_config.yaml  auto-commit-docs.sh  auto-update-docs-submodule.sh  docs-workflow.sh  fix_api_docs.py  fix_docs.sh  fix_navigation_links.py  fix_title_underlines.sh  generate_api_docs.py  generate_simple_api_docs.py  pre-commit-docs-update.sh  update_api_docs.sh  verify_api_docs_structure.py  verify_docs.sh
source/: api_reference.rst  async_runner.rst  getting_started.rst  index.rst
websockets/: __init__.py  exceptions.py
(+140 files in other folders)
